--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+* {
+  padding:0;
+  margin:0;
+  vertical-align:baseline;
+  list-style:none;
+  border:0
+}
+
+#root {
+  background-color: rgba(0, 0, 0, 0.856);
+  color: white;
+}
+
 .App {
   text-align: center;
 }
