--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 * {
-  padding:0;
-  margin:0;
-  vertical-align:baseline;
-  list-style:none;
-  border:0
+  border: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
 }
 
 #root {
