--- a/src/css/FormInput.css
+++ b/src/css/FormInput.css
@@ -1,6 +1,6 @@
 .form-input {
   align-items: center;
-  color: #fed34f !important;
+  color: #fed34f;
   display: flex;
   flex-direction: column;
   font-size: 20px;
@@ -9,25 +9,27 @@
 }
 
 .form-input input {
-  background:#282c34;
+  background: #282c34;
   border-radius: 5px;
   box-shadow: 1px 1px 5px yellow;
   margin-left: 15px;
   width: 200px;
 }
 
+.form2-order input {
+  margin-left: 5px;
+  margin-right: 25px;
+  width: 15px;
+}
+
 .form-input input:hover {
-  background:black;
+  background: black;
   border-radius: 5px;
   width: 200px;
 }
 
-.form-input input:focus {
-  outline: none;
-}
-
 .form-input select {
-  background:#282c34;
+  background: #282c34;
   border-radius: 5px;
   box-shadow: 1px 1px 5px yellow;
   font-size: 20px;
@@ -39,7 +41,7 @@
 }
 
 .form-input select:hover {
-  background:black;
+  background: black;
   border-radius: 5px;
   width: 200px;
 }
@@ -48,37 +50,56 @@
   outline: none;
 }
 
-.form-input [type=number] {
+.form-input [ type = 'number' ] {
   padding: 5px;
   text-align: center;
   width: 2cm;
 }
 
-.form-input [type=number]:hover {
+.form-input [ type = 'number' ]:hover {
   width: 2cm;
 }
 
 .form-input button {
-  background-color: #694D10;
+  background-color: #694d10;
+  border: 1px solid #d90;
   border-radius: 10px;
-  border: 1px solid #DD9900;
   margin-left: 15px;
   margin-right: 10px;
   padding: 7px;
 }
 
+.form2-order button {
+  background-color: #694d10;
+  border: 1px solid #d90;
+  border-radius: 10px;
+  padding: 7px;
+}
+
 .form-input button:hover {
-  background-color: #1B1B1B;
+  background-color: #1b1b1b;
   border: 1px solid black;
   color: white;
   cursor: pointer;
 }
 
-.form-input button:nth-child(2){
+.form2-order {
+  margin-top: 1cm;
+}
+
+.form-input input:focus {
+  outline: none;
+}
+
+.form2-order input:hover {
+  width: 15px;
+}
+
+.form-input button:nth-child( 2 ) {
   background: transparent;
+  border: 2px solid red;
   border-radius: 2em;
-  border: 2px solid #f00;
-  color: #f00;
+  color: red;
   display: inline-block;
   font-size: 12px;
   height: 20px;
@@ -89,35 +110,14 @@
   width: 20px;
 }
 
-.form-input button:nth-child(6-10){
-  border: 3px solid #f00;
+.form-input button:nth-child( 6-10 ) {
+  border: 3px solid red;
   margin: -3cm 1cm 1cm 27cm;
   position: fixed;
 }
 
-.form2-order {
-  margin-top: 1cm;
-}
-
-.form2-order input {
-  margin-left: 5px;
-  margin-right: 25px;
-  width: 15px;
-}
-
-.form2-order input:hover {
-  width: 15px;
-}
-
-.form2-order button {
-  background-color: #694D10;
-  border-radius: 10px;
-  border: 1px solid #DD9900;
-  padding: 7px;
-}
-
 .form2-order button:hover {
-  background-color: #1B1B1B;
+  background-color: #1b1b1b;
   border: 1px solid black;
   color: white;
   cursor: pointer;
