--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,6 +1,6 @@
 .header-div {
   align-items: center;
-  color: #fed34f !important;
+  color: #fed34f;
   display: flex;
   flex-direction: column;
   font-size: 20px;
@@ -13,7 +13,7 @@
 }
 
 .header-div input {
-  background:#282c34;
+  background: #282c34;
   border-radius: 5px;
   box-shadow: 1px 1px 5px yellow;
   margin-left: 15px;
@@ -21,7 +21,7 @@
 }
 
 .header-div input:hover {
-  background:black;
+  background: black;
   border-radius: 5px;
   width: 200px;
 }
